# targettracker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  ProjectGuidebook.md  README.md  app.py  pyproject.toml  requirements-app.txt  requirements-research.txt  requirements.txt
Notebooks/: 01_data_retrieval_exploration.ipynb  02_spacy_baseline.ipynb  03_llm_extraction.ipynb  04_rag_matching.ipynb  05_langgraph_agents.ipynb  06_financial_evaluation.ipynb  07_ablation_benchmarking.ipynb  08_demo_preparation.ipynb
configs/: config.yaml
demo/: app.py  bootstrap.py  cli.py  data_manager.py  interface.py  pipeline_runner.py  theme.py
demo/sample_cache/: pipeline_cache.json  portfolio_screen.json
docs/: proposal.md
notebooks/: 01_data_retrieval_v2.ipynb  02_spacy_baseline_v2.ipynb  03_llm_extraction_v2.ipynb  04_rag_matching_v4.ipynb  04b_threshold_calibration.ipynb  05_langgraph_agents_v3.ipynb  06_demo_preparation_v2.ipynb
research/: README.md
scripts/: build_demo_cache.py  run_data_retrieval.py  run_demo.py  run_llm_extraction.py  run_pipeline.py  run_rag_matching.py  run_spacy_baseline.py  run_threshold_calibration.py
src/: __init__.py  __main__.py  cli.py  status.py
src/agents/: __init__.py  classifier_agent.py  comparator_agent.py  extractor_agent.py  graph.py  reporter_agent.py  state.py
src/baseline/: __init__.py  baseline_pipeline.py  moving_targets.py  target_extractor.py
src/data_retrieval/: __init__.py  analyst_forecasts.py  ciq_loader.py  cli.py  factors.py  fundamentals.py  linkers.py  pipeline.py  returns.py  ticker_map.py  transcripts.py  universe.py
src/evaluation/: __init__.py  announcement_cars.py  comparison.py  fama_macbeth.py  portfolio_construction.py
src/llm_extraction/: __init__.py  extraction_pipeline.py  fine_tuning.py  llm_extractor.py  prompts.py
src/rag/: __init__.py  calibration.py  semantic_matcher.py  vector_store.py
