[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "target-tracker"
version = "0.1.0"
description = "Target Tracker — commitment continuity analysis for earnings calls."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14",
  "httpx>=0.27",
  "openai>=1.0",
  "typing-extensions>=4.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Matches requirements-app.txt — everything needed for `python app.py`
app = [
  "gradio>=4.0,<7",
  "langgraph>=0.1.5",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.3",
]
baseline = [
  "spacy>=3.7",
]
data = [
  "wrds>=3.2",
]
rag = [
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
]
agents = [
  "langgraph>=0.1.5",
]
demo = [
  "gradio>=4.0,<7",
]
evaluation = [
  "statsmodels>=0.14",
  "scipy>=1.11",
]
finetune = [
  "accelerate>=0.30",
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "datasets>=2.19",
  "peft>=0.11",
  "torch>=2.2",
  "transformers>=4.41",
]
all = [
  "gradio>=4.0,<7",
  "langgraph>=0.1.5",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.3",
  "spacy>=3.7",
  "wrds>=3.2",
  "statsmodels>=0.14",
  "scipy>=1.11",
]

[project.scripts]
earningslens = "src.cli:main"
earningslens-data = "src.data_retrieval.cli:main"
earningslens-baseline = "src.baseline.baseline_pipeline:main"
earningslens-llm = "src.llm_extraction.extraction_pipeline:main"

[tool.setuptools.packages.find]
include = ["src*", "demo*"]
exclude = ["notebooks*", "docs*"]
